Introduce container ordinal in the search paramter index tables. Populate the value when the indexes are built. Refactor to decouple entities from settings and from hashing logic.